feat: JSON 형식으로 메시지 받도록 DTO설정

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-aws-messaging'
+    implementation 'org.springframework.cloud:spring-cloud-aws-autoconfigure'
     implementation 'com.sun.mail:javax.mail:1.6.2'
 }
 
