--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:2.3.8.RELEASE'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-aws-messaging'
     implementation 'org.springframework.cloud:spring-cloud-aws-autoconfigure'
